--- a/.github/workflows/pubby.yml
+++ b/.github/workflows/pubby.yml
@@ -39,30 +39,30 @@ jobs:
           async function safeScreenshot(page, path) {
             try {
               await page.screenshot({ path, fullPage: true });
-              console.log(`Screenshot taken: ${path}`);
+              console.log(\`Screenshot taken: \${path}\`);
             } catch (e) {
-              console.error(`Screenshot error: ${e.message}`);
+              console.error(\`Screenshot error: \${e.message}\`);
             }
           }
 
           async function dumpPageInfo(page, label) {
             try {
-              console.log(`[${label}] URL: ${page.url()}`);
+              console.log(\`[\${label}] URL: \${page.url()}\`);
               const html = await page.content();
-              const filename = `debug/${label.replace(/\s+/g,'_')}_${Date.now()}.html`;
+              const filename = \`debug/\${label.replace(/\\s+/g,'_')}_\${Date.now()}.html\`;
               fs.writeFileSync(filename, html);
-              console.log(`[${label}] HTML dumped to ${filename}`);
+              console.log(\`[\${label}] HTML dumped to \${filename}\`);
               const cookies = await page.cookies();
-              console.log(`[${label}] Cookies:`, cookies);
+              console.log(\`[\${label}] Cookies:\`, cookies);
             } catch (e) {
-              console.error(`Error dumping page info for ${label}: ${e.message}`);
+              console.error(\`Error dumping page info for \${label}: \${e.message}\`);
             }
           }
 
           async function loginAndBrowse(loginUrl, browseUrl, username, password) {
             let browser, page;
             try {
-              // Launch browser
+              // Launch browser maximized
               browser = await puppeteer.launch({
                 headless: 'new',
                 defaultViewport: null,
@@ -74,31 +74,31 @@ jobs:
               // Stage 1: Login
               console.log("Stage 1: Navigating to login page:", loginUrl);
               await page.goto(loginUrl, { waitUntil: 'networkidle2', timeout: 60000 });
-              await safeScreenshot(page, `screenshots/pubby_home_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_home_\${Date.now()}.png\`);
               console.log("Stage 1: Filling in login credentials...");
               await page.type('input[name="email"]', username, { delay: 100 });
               await page.type('input[name="password"]', password, { delay: 100 });
-              await safeScreenshot(page, `screenshots/pubby_credentials_filled_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_credentials_filled_\${Date.now()}.png\`);
               console.log("Stage 1: Submitting login form...");
               await Promise.all([
                 page.click('button[type="submit"]'),
                 page.waitForNavigation({ waitUntil: 'networkidle2', timeout: 60000 })
               ]);
-              await safeScreenshot(page, `screenshots/pubby_after_login_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_after_login_\${Date.now()}.png\`);
 
               // Stage 2: Verify login
               console.log("Stage 2: Verifying login...");
               const dash = await page.$('a.logout, .dashboard');
               if (!dash) {
                 console.warn("Stage 2: Login may have failed.");
-                await safeScreenshot(page, `screenshots/pubby_login_failed_${Date.now()}.png`);
+                await safeScreenshot(page, \`screenshots/pubby_login_failed_\${Date.now()}.png\`);
               }
 
               // Stage 3: Browse page
               console.log("Stage 3: Navigating to browse page:", browseUrl);
               await page.goto(browseUrl, { waitUntil: 'networkidle2', timeout: 60000 });
               await sleep(10000);
-              await safeScreenshot(page, `screenshots/pubby_browse_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_browse_\${Date.now()}.png\`);
 
               // Stage 4: Click 'Kindle Unlimited' filter
               console.log("Stage 4: Clicking 'Kindle Unlimited' filter…");
@@ -108,7 +108,7 @@ jobs:
                 if (tag) tag.click();
               });
               await sleep(5000);
-              await safeScreenshot(page, `screenshots/pubby_kindle_unlimited_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_kindle_unlimited_\${Date.now()}.png\`);
 
               // Stage 5: Click 'Most Snaps' filter
               console.log("Stage 5: Clicking 'Most Snaps' filter…");
@@ -118,20 +118,20 @@ jobs:
                 if (tag) tag.click();
               });
               await sleep(5000);
-              await safeScreenshot(page, `screenshots/pubby_most_snaps_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_most_snaps_\${Date.now()}.png\`);
 
               // Stage 6: Wait for books container
               console.log("Stage 6: Waiting for books container…");
               await page.waitForSelector('.library-books-container', { visible: true, timeout: 60000 });
-              await safeScreenshot(page, `screenshots/pubby_browse_loaded_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_browse_loaded_\${Date.now()}.png\`);
               await sleep(5000);
 
               // Stage 7: Scroll to load more books
               for (let i = 0; i < 3; i++) {
-                console.log(`Stage 7: Scrolling iteration ${i+1}`);
+                console.log(\`Stage 7: Scrolling iteration \${i+1}\`);
                 await page.evaluate(() => window.scrollBy(0, window.innerHeight));
                 await sleep(3000);
-                await safeScreenshot(page, `screenshots/pubby_scroll_${i+1}_${Date.now()}.png`);
+                await safeScreenshot(page, \`screenshots/pubby_scroll_\${i+1}_\${Date.now()}.png\`);
               }
 
               // Stage 8: Extract recommended book titles
@@ -141,7 +141,7 @@ jobs:
                   .map(el => el.innerText.trim())
               );
               console.log("Stage 8: Recommended Books:", recommended);
-              await safeScreenshot(page, `screenshots/pubby_books_extracted_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_books_extracted_\${Date.now()}.png\`);
 
               // Stage 9: Extract activity timeline
               console.log("Stage 9: Extracting Activity Timeline…");
@@ -153,7 +153,7 @@ jobs:
                   }))
               );
               console.log("Stage 9: Activity Timeline:", timeline);
-              await safeScreenshot(page, `screenshots/pubby_activity_extracted_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_activity_extracted_\${Date.now()}.png\`);
 
               // Stage 10: Pick a Kindle Unlimited book
               console.log("Stage 10: Scanning for Kindle Unlimited cards…");
@@ -167,7 +167,7 @@ jobs:
                 if (el) { await el.click(); break; }
               }
               await sleep(2000);
-              await safeScreenshot(page, `screenshots/pubby_ku_card_clicked_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_ku_card_clicked_\${Date.now()}.png\`);
 
               // Stage 11: Click 'Pick Book'
               console.log("Stage 11: Clicking 'Pick Book'…");
@@ -181,7 +181,7 @@ jobs:
                 if (el) { await el.click(); break; }
               }
               await sleep(2000);
-              await safeScreenshot(page, `screenshots/pubby_pick_book_clicked_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_pick_book_clicked_\${Date.now()}.png\`);
 
               // Stage 11b: Activate Reader and click current page
               console.log("Stage 11b: Clicking 'Reader' tab…");
@@ -192,7 +192,7 @@ jobs:
               });
               console.log("Stage 11b: Waiting for current page label…");
               await page.waitForSelector('.section-container .pages-container .page-label.current-page', { visible: true, timeout: 60000 });
-              await safeScreenshot(page, `screenshots/pubby_reader_loaded_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_reader_loaded_\${Date.now()}.png\`);
               console.log("Stage 11b: Clicking current page in Reader…");
               const clickedReader = await page.evaluate(() => {
                 const curr = document.querySelector('.section-container .pages-container .page-label.current-page');
@@ -202,49 +202,46 @@ jobs:
               if (!clickedReader) {
                 console.error("Stage 11b ERROR: Could not click current page in Reader");
               } else {
-                await safeScreenshot(page, `screenshots/pubby_reader_clicked_${Date.now()}.png`);
+                await safeScreenshot(page, \`screenshots/pubby_reader_clicked_\${Date.now()}.png\`);
               }
 
-              // Stage 12: View On Amazon (selector-based wait)
+              // Stage 12: View On Amazon (popup pattern)
               console.log("=== STAGE 12: View On Amazon DEBUG START ===");
               await dumpPageInfo(page, "before_click");
               await page.waitForSelector('.action.copy-amazon-link', { visible: true, timeout: 60000 });
-              await safeScreenshot(page, `screenshots/pubby_before_amazon_${Date.now()}.png`);
+              await safeScreenshot(page, \`screenshots/pubby_before_amazon_\${Date.now()}.png\`);
+
               try {
-                console.log("Stage 12: Waiting for new Amazon target...");
-                const targetPromise = browser.waitForTarget(
-                  t => /amazon\\.co/.test(t.url()),
-                  { timeout: 90000 }
-                );
-                await page.click('.action.copy-amazon-link');
-                const newTarget = await targetPromise;
-                console.log("Stage 12: New target detected:", newTarget.url());
-                const newPage = await newTarget.page();
-                if (!newPage) throw new Error("Failed to get newPage from target");
+                // Listen for the new page popup
+                const [newPage] = await Promise.all([
+                  page.waitForEvent('popup', { timeout: 90000 }),
+                  page.click('.action.copy-amazon-link')
+                ]);
+
+                console.log("Stage 12: Popup event received:", newPage.url());
                 await dumpPageInfo(newPage, "amazon_tab_before_nav");
-                console.log("Stage 12: Bringing new tab to front…");
                 await newPage.bringToFront();
-                // Wait for the Amazon product title to appear
-                await newPage.waitForSelector('#productTitle', { visible: true, timeout: 90000 });
-                await safeScreenshot(newPage, `screenshots/pubby_amazon_tab_${Date.now()}.png`);
+
+                // Wait for productTitle to exist in DOM
+                await newPage.waitForSelector('#productTitle', { timeout: 90000 });
+                await safeScreenshot(newPage, \`screenshots/pubby_amazon_tab_\${Date.now()}.png\`);
                 console.log("=== STAGE 12: View On Amazon DEBUG SUCCESS ===");
               } catch (stageErr) {
                 console.error("!!! ERROR in STAGE 12 DEBUG !!!", stageErr);
                 await dumpPageInfo(page, "stage12_error_page");
-                await safeScreenshot(page, `screenshots/pubby_amazon_error_${Date.now()}.png`);
+                await safeScreenshot(page, \`screenshots/pubby_amazon_error_\${Date.now()}.png\`);
                 console.log("Stage 12: Targets after error:");
                 (await browser.targets()).forEach((t, i) =>
-                  console.log(`  [${i}] type=${t.type()} url=${t.url()}`)
+                  console.log(\`  [\${i}] type=\${t.type()} url=\${t.url()}\`)
                 );
               }
-
             } catch (err) {
               console.error("Script-level error:", err);
             } finally {
               if (page) {
                 try {
                   const finalHtml = await page.content();
-                  fs.writeFileSync(`debug/final_page_${Date.now()}.html`, finalHtml);
+                  fs.writeFileSync(\`debug/final_page_\${Date.now()}.html\`, finalHtml);
                 } catch {}
               }
               if (browser) await browser.close();
